--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
       <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script type='text/javascript' src='index.js'></script>
+    <script type="text/javascript" src="message.js"></script>  
     <script>
       // your code here
     </script>
