--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <body>
     <div id="game">
-      <div id="dodger" style="bottom: 0px; right: 0px;"></div>
+      <div id="dodger" style="bottom: 0px; left: 180px;"></div>
     </div>
     <script type='text/javascript' src='index.js'></script>
     <script type="text/javascript" src="message.js"></script>  
